--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,9 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 body {
@@ -34,6 +37,9 @@ body {
   color: var(--color-light--2);
   font-weight: 400;
   line-height: 1.6;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
   
 }
 
